<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewFileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nom_zone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:hint="@string/nom_de_la_zone"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/largeur_zone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:hint="@string/largeur_de_la_zone"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/longueur_zone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:hint="@string/longueur_de_la_zone"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/distance_profils"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:hint="@string/distance_profils"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/ecarts_largeur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:hint="@string/ecarts_largeur"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/ButtonSaveNewFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Créer le fichier de zone"
            app:icon="@drawable/save_file"
            app:iconSize="48dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>